--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav >
 
             <ul>
-                <li><a href="https://www.google.com">Ahmand Arman</a></li>
+                <li><a href="https://ahmad-arman.github.io/traning-lab-03/">Ahmand Arman</a></li>
 
                 <li><a href="https://marwanreyadal-khawaldeh.github.io/Demo/">Marwan Reyad AL-Khawaldeh</a></li>
 
