--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav >
 
             <ul>
-                <li><a href="https://ahmad-arman.github.io/traning-lab-03/">Ahmand Arman</a></li>
+                <li><a href="https://ahmad-arman.github.io/traning-lab-03/">Software</a></li>
 
-                <li><a href="https://marwanreyadal-khawaldeh.github.io/Demo/">Marwan Reyad AL-Khawaldeh</a></li>
-
+                <li><a href="https://marwanreyadal-khawaldeh.github.io/Demo/">Showroom Car</a></li>
+                <li><a href="#">Bulding</a></li>
                 
 
             </ul>
