--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="https://ahmad-arman.github.io/traning-lab-03/">Software</a></li>
 
                 <li><a href="https://marwanreyadal-khawaldeh.github.io/Demo/">Showroom Car</a></li>
-                <li><a href="#">Bulding</a></li>
+                <li><a href="#">Building</a></li>
                 
 
             </ul>
